--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -2,6 +2,6 @@
 	{{burger_name}}
 
 	<button class="change-devoured" data-id="{{id}}" data-newdevoured="{{devoured}}">
-		{{#if devoured}}Not Devoured!{{else}}Devoured!{{/if}}
+		{{#if devoured}}&#127828;{{else}}&#9760;&#65039;{{/if}}
 	</button>
 </li>
